--- a/modulo-02_bases_datos/Postgres/Makefile
+++ b/modulo-02_bases_datos/Postgres/Makefile
@@ -14,15 +14,15 @@ up: ## Levanta Postgres y PGAdmin en segundo plano
 stop: ## Detiene los contenedores sin borrarlos
 	docker compose stop
 
-down: ## Detiene y elimina contenedores y redes
-	docker compose down
+down: ## Detiene y elimina contenedores y volumen de datos
+	docker compose down -v
 
-restart: ## Reinicia el entorno completo
+restart: ## Reinicia todo el entorno
 	$(MAKE) down
 	$(MAKE) up
 
-logs: ## Muestra logs de los servicios
-	docker compose logs -f
+logs: ## Muestra logs de Postgres
+	docker compose logs -f postgres
 
 inspect: ## Inspecciona la configuración de docker-compose
 	docker compose config
@@ -30,11 +30,11 @@ inspect: ## Inspecciona la configuración de docker-compose
 ip: ## Muestra la IP del contenedor de Postgres
 	@docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(POSTGRES_CONTAINER_NAME)
 
-psql: ## Abre psql dentro del contenedor de Postgres
+psql: ## Abre psql dentro del contenedor de Postgres (se conecta a $(POSTGRES_DB))
 	docker exec -it $(POSTGRES_CONTAINER_NAME) psql -U $(POSTGRES_USER) -d $(POSTGRES_DB)
 
-seed: ## Ejecuta scripts .sql en ./initdb dentro del contenedor
-	docker exec -it $(POSTGRES_CONTAINER_NAME) bash -lc "for f in /docker-entrypoint-initdb.d/*.sql; do [ -f $$f ] && echo '>> Ejecutando' $$f && psql -U $(POSTGRES_USER) -d $(POSTGRES_DB) -f $$f; done"
+seed: ## Ejecuta los scripts .sql en ./initdb dentro del contenedor (sobre $(POSTGRES_DB))
+	docker exec -it $(POSTGRES_CONTAINER_NAME) bash -lc 'for f in /docker-entrypoint-initdb.d/*.sql; do echo "Ejecutando $$f"; psql -U $(POSTGRES_USER) -d $(POSTGRES_DB) -f $$f; done'
 
-status: ## Lista contenedores relevantes
+status: ## Lista contenedores de Postgres y PGAdmin
 	docker ps --filter "name=$(POSTGRES_CONTAINER_NAME)" --filter "name=$(PGADMIN_CONTAINER_NAME)"
