--- a/modulo-02_bases_datos/Postgres/docker-compose.yml
+++ b/modulo-02_bases_datos/Postgres/docker-compose.yml
@@ -12,6 +12,13 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./initdb:/docker-entrypoint-initdb.d
       - ./data/olist:/data/olist
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   pgadmin:
     image: dpage/pgadmin4:8
     container_name: ${PGADMIN_CONTAINER_NAME}
@@ -21,7 +28,9 @@ services:
     ports:
       - "${PGADMIN_PORT}:80"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
 
 volumes:
   postgres_data:
